--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,21 +25,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=latest
-            type=raw,value=1.0.0
-            type=sha,format=short
-
       - name: Build and push image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: app/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            irwan34/python-app:latest
+            irwan34/python-app:1.0.0
+            irwan34/python-app:${{ github.sha }}
