--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push image
+        id: docker_build   # ⬅️ INI SAJA YANG DITAMBAHKAN
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -42,4 +43,17 @@ jobs:
           echo "Docker Image Digest:"
           echo "${{ steps.docker_build.outputs.digest }}"
           echo "================================"
+      - name: Update GitOps repo with new image digest
+        run: |
+          git clone https://x-access-token:${{ secrets.GITOPS_TOKEN }}@github.com/irwanmaul34/project-devops-gitops.git
+          cd gitops
+
+          sed -i "s|image: .*|image: irwan34/python-app@${{ steps.docker_build.outputs.digest }}|" production/deployment.yaml
+
+          git config user.name "ci-bot"
+          git config user.email "ci@github.com"
+
+          git status
+          git commit -am "Update myapp image to ${{ steps.docker_build.outputs.digest }}"
+          git push origin main
 
