--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,9 @@ on:
       - main
 
 env:
-  IMAGE_NAME: python-app
+  FRONTEND_IMAGE: irwan34/frontend-service
+  API_IMAGE: irwan34/api-service
+
 
 jobs:
   build:
@@ -25,49 +27,74 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push image
-        id: docker_build   # ⬅️ INI SAJA YANG DITAMBAHKAN
+      - name: Build and push API image
+        id: build_api
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: app/Dockerfile
+          context: ./api-service
           push: true
           tags: |
-            irwan34/python-app:latest
-            irwan34/python-app:1.0.0
-            irwan34/python-app:${{ github.sha }}
+            ${{ env.API_IMAGE }}:latest
+            ${{ env.API_IMAGE }}:${{ github.sha }}
+          
+      - name: Build and push Frontend image
+        id: build_frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend-service
+          push: true
+          tags: |
+            ${{ env.FRONTEND_IMAGE }}:latest
+            ${{ env.FRONTEND_IMAGE }}:${{ github.sha }}
 
-      - name: Show image digest
+
+
+      - name: Show image digest API
         run: |
           echo "================================"
           echo "Docker Image Digest:"
-          echo "${{ steps.docker_build.outputs.digest }}"
+          echo "${{ steps.build_frontend.outputs.digest }}"
           echo "================================"
-      - name: Update GitOps repo with new image digest
+
+      - name: Show image digest API
+        run: |
+          echo "================================"
+          echo "Docker Image Digest:"
+          echo "${{ steps.build_api.outputs.digest }}"
+          echo "================================"
+          
+      - name: Update Production GitOps
         run: |
           git clone https://x-access-token:${{ secrets.GITOPS_TOKEN }}@github.com/irwanmaul34/project-devops-gitops.git
           cd project-devops-gitops
-
-          sed -i "s|image: .*|image: irwan34/python-app@${{ steps.docker_build.outputs.digest }}|" production/deployment.yaml
-
+      
+          sed -i "s|image: .*frontend-service.*|image: ${{ env.FRONTEND_IMAGE }}@${{ steps.build_frontend.outputs.digest }}|" production/frontend-deployment.yaml
+      
+          sed -i "s|image: .*api-service.*|image: ${{ env.API_IMAGE }}@${{ steps.build_api.outputs.digest }}|" production/api-deployment.yaml
+      
           git config user.name "ci-bot"
           git config user.email "ci@github.com"
-
-          git status
-          git commit -am "Update myapp image to ${{ steps.docker_build.outputs.digest }}"
+      
+          git add .
+          git commit -m "Update production images"
           git push origin main
 
-      - name: Update staging image in GitOps repo
+
+      - name: Update Staging GitOps
         run: |
           rm -rf gitops
           git clone https://${{ secrets.GITOPS_TOKEN }}@github.com/irwanmaul34/project-devops-gitops.git gitops
           cd gitops/staging
-
-          sed -i "s|image:.*|image: irwan34/python-app:${{ github.sha }}|" deployment.yaml
-
+      
+          sed -i "s|image: .*frontend-service.*|image: ${{ env.FRONTEND_IMAGE }}:${{ github.sha }}|" frontend-deployment.yaml
+      
+          sed -i "s|image: .*api-service.*|image: ${{ env.API_IMAGE }}:${{ github.sha }}|" api-deployment.yaml
+      
           git config user.email "ci@github.com"
           git config user.name "github-actions"
-          git add deployment.yaml
-          git commit -m "chore(staging): update image to ${{ github.sha }}"
+      
+          git add .
+          git commit -m "chore(staging): update images to ${{ github.sha }}"
           git push origin main
+
 
