--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         id: build_api
         uses: docker/build-push-action@v5
         with:
-          context: ./api-service
+          context: app/api-service
           push: true
           tags: |
             ${{ env.API_IMAGE }}:latest
@@ -41,7 +41,7 @@ jobs:
         id: build_frontend
         uses: docker/build-push-action@v5
         with:
-          context: ./frontend-service
+          context: app/frontend-service
           push: true
           tags: |
             ${{ env.FRONTEND_IMAGE }}:latest
